# Grader-Distributed

./: README.md  docker-compose.yaml
agentic_rag/: eval.py  main.py  pyproject.toml
llama3.1/: experiment.py
nginx/: Dockerfile  nginx.conf
test/: benchmark.md  benchmark.py  benchmark_dynamic.py  benchmark_log.txt  eval_dist.py  kill_ollamas.sh  main.py  monitor_ollama.sh  ollama_script.sh  ollama_script_output.txt  output_with_perfCounterTimer.md  pyproject.toml  random_results1721754446.8499637.csv  random_results_with_1000_1721754732.6249423.csv  results1721753964.4901934.csv  spawn_ollamas.sh  task_scheduler.py  timer.py
test/index_storage/: docstore.json  index_store.json
test/plots/: bench_plots.py
test/results/: benchmark_log.txt  benchmark_timings.txt  benchmark_timings_18_7_2024.txt  random_results1721754190.932745.csv  random_results1721754333.986876.csv  random_results1721754566.4669547.csv  random_results_with_10000_1721755687.1028278.csv  static_results_with_10000_1721760000.3070996.csv
