[tool.poetry]
name = "agentic-rag"
version = "0.1.0"
description = ""
authors = ["anand-kamble <amk23j@fsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-llms-ollama = "^0.1.5"
llama-index-embeddings-ollama = "^0.1.2"
tqdm = "^4.66.4"
llama-index = "^0.10.52"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
